# FinancialFunctionsR

./: .Rbuildignore  .Rhistory  .gitignore  DESCRIPTION  INSTRUCTIONS.R  LICENSE  NAMESPACE  README.md  _pkgdown.yml
.github/workflows/: pkgdown.yaml
R/: extendr-wrappers.R  financial_functions-package.R
man/: FinancialFunctions-package.Rd  accrint.Rd  accrintm.Rd  amordegrc.Rd  amorlinc.Rd  convexity.Rd  coupdaybs.Rd  coupdays.Rd  coupdaysnc.Rd  coupncd.Rd  coupnum.Rd  couppcd.Rd  cumipmt.Rd  cumprinc.Rd  db.Rd  ddb.Rd  disc.Rd  dollarde.Rd  dollarfr.Rd  duration.Rd  effect.Rd  fv.Rd  fvschedule.Rd  intrate.Rd  ipmt.Rd  irr.Rd  ispmt.Rd  mduration.Rd  mirr.Rd  nominal.Rd  nper.Rd  npv.Rd  oddfprice.Rd  oddfyield.Rd  oddlprice.Rd  oddlyield.Rd  pduration.Rd  pmt.Rd  ppmt.Rd  price.Rd  (+17 more)
src/: FinancialFunctions-win.def  Makevars.in  Makevars.win.in  entrypoint.c
src/rust/: Cargo.toml  document.rs
src/rust/src/: annuity.rs  bonds.rs  cash_flows.rs  coupons.rs  depreciation.rs  document.rs  helpers.rs  lib.rs  misc.rs
tests/: testthat.R
tests/testthat/: test-annuity.R  test-cashflows.R  test-other.R
tutorials/: FinancialFunctions_Tutorial.html  FinancialFunctions_Tutorial.qmd  speed_benchmark.html  speed_benchmark.qmd
vignettes/: FinancialFunctions.Rmd  FinancialFunctions_Tutorial.Rmd  speed_benchmark.Rmd
